Fixed wrong filename

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -23,7 +23,7 @@
     "![Eq. minimise](img/minimise.png)\n",
     "which is the square of the deviation between the measured data points and the line. \n",
     "Equations for the coefficients can be found by differentiation *S* with respect to *a* and *b* and setting the result to zero\n",
-    "![Eq. partial](img/partial.png)\n",
+    "![Eq. partial](img/partial_derivative.png)\n",
     "\n",
     "In python, this has already been implemented in the *scipy* module and a simple script to fit a straight line to the datapoints is shown below"
    ]
