--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Simple Linear Regression\n",
+    "----------------------------------------\n",
+    "\n",
     "In data analysis, one often faces the problem of fitting a linear function to a set of data points. \n",
     "![Eq. straing line](img/linear_curve.png)\n",
     "where the coefficients *a* and *b* are to be determined. Let's say we have measured a set of data points,\n",
